* Jun 19 2001 hship

Include the web directory in the full distribution.
Convert ExceptionAnalyzer to not use the GNU Regexp framework.

[434570] direct service for forms
[434578] double logging

* Jun 18 2001 hship

Put in provisional support for deploying on the Intranet.

* Jun 18 2001 hship

Add a chapter to the developer's guide on the Tapestry Script documents.

* Jun 15 2001 hship

Framework:
- Change how form element ids are generated.  They will now usually
  match the component id, with a numeric suffix to ensure uniqueness.
- Change how the Body component deals with preloaded images to work
  better when the same image is used repeatedly.
  
Contrib:
- Get basic manual ordering working in Palette component.
  
* Jun 15 2001 hship

Create contrib project (net.sf.tapestry.contrib.jar).
Create Palette component (not complete).
Update Tutorial to make use of the Palette.
Framework:
- Add support for form event handlers
- Add FormEventType.java, an Enum for the different types of events.

* Jun 14 2001 hship

Reorganize and improve how Scripts are handled in Tapestry.  Add IEngine.getScriptSource() and
make access to Scripts similar to access to templates and specifications.
Move the Script component to the html package.

* Jun 13 2001 hship

Fix typo in framework Makefile (caused some package resources not to be copied).
[432796] Creating visit doesn't create session

* Jun 12 2001 hship

Adjust for changes in JBE (concerning cataloging).

* Jun 7 hship

[431135] Shell refresh problem
[431137] Defeat client-side page caching

* Jun 1 hship

Fix an IllegalStateException thrown in the ApplicationServlet
(when deciding whether to store the engine into the session).  Fix another
exception thrown when the restart action is triggered on a stateless
application.

[429157] restart session fails
[429447] Restart throws exception

* May 30 hship

Many minor changes to support stateless Tapestry applications (the HttpSession is
not created until really needed).