@@ -1,3 +1,7 @@
+* Jun 20 2001 hship
+
+[434855] SimplePageRecorder failure w/ EJBs
+
 * Jun 19 2001 hship
 
 Include the web directory in the full distribution.
